# adi-bbp

./: .gitignore  .gitmodules  build.sbt
boot/: zynq-zc706-adv7511-ad9361-fmcomms2-3.dts
boot/baseband/: .gitignore  Makefile  baseband.c  rx_conf.c  rx_conf.h
boot/baseband/.tmp_versions/: baseband.mod
ip/: .gitignore  Makefile  Makefrag.mill  NCOTableLUT.v  NCOTableLUT_1.v  baseband.xdc  baseband_ip.tcl  baseband_test.sv  baseband_test.tcl  circularTable16.v  test_wrapper.v  touchup_for_debug.sh
ip/cocotb/: .gitignore  BasebandTB.py  ChannelModel.py  DecoupledDriver.py  DecoupledMonitor.py  DspBlockTB.py  FFTMonitor.py  FFTTB.py  Makefile  touchup_for_icarus.sh
projects/common/: build_boot_bin.sh  common.tcl
projects/zc706/: .gitignore  Makefile  devicetree.dts  mem_init_sys.txt  system_bd.tcl  system_constr.xdc  system_project.tcl  zc706.tcl
projects/zed/: Makefile  zed.tcl
src/main/scala/baseband/: App.scala  Baseband.scala  Gold.scala  StreamAligner.scala  StreamMux.scala  TimeGate.scala
sw/: .gitignore  CMakeLists.txt  baseband.c  baseband.h  baseband_test.c  build.sh  iiostream.c  tx.c  tx.h  tx.i  tx_test.c
sw/test/: CMakeLists.txt  test_tx.cc
